# notipus

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  README.md  app.py  commit-message.txt  docker-compose.dev.yml  docker-compose.yml  eslint.config.js  eslint.config.mjs  fly.toml  fly.tompl  manage.py  nginx.conf  package.json  pyproject.toml  requirements.txt  shopify.app.toml.example
.cursor/rules/: django.mdc  general.mdc  python.mdc
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  fly-deploy.yml  test.yml
app/: __init__.py  config.py  enrichment.py  event_processor.py  exceptions.py  insights.py  main.py  manage.py  message_generator.py  messages.py  models.py  routes.py  slack_client.py
app/core/: adapters.py  admin.py  apps.py  conftest.py  models.py  permissions.py  signals.py  test_adapters.py  test_permissions.py  tests.py  tests_admin.py  tests_management_commands.py  tests_providers.py  tests_services.py  tests_shopify_oauth.py  tests_stripe_api.py  tests_templates.py  tests_views.py  urls.py  views.py
app/core/management/: __init__.py
app/core/management/commands/: setup_stripe_plans.py  sync_stripe_subscriptions.py
app/core/migrations/: 0001_initial.py  0002_alter_integration_integration_type_webauthnchallenge_and_more.py  0002_usagelimit_organization_billing_cycle_anchor_and_more.py  0003_alter_organization_trial_end_date_integration.py  0003_organization_shop_domain_and_more.py  0003_populate_initial_plans.py  0004_add_company_brand_fields.py  0004_company_alter_organization_trial_end_date.py  0005_add_free_plan.py  0005_fix_trial_end_date_default.py  0006_allow_null_shop_domain.py  0007_workspace_rename_and_invitation.py  0008_migrate_userprofile_to_workspacemember.py  0009_add_email_index_to_invitation.py  0010_allow_null_slack_user_id.py  0011_add_logo_storage_to_company.py  0012_add_company_indexes.py  0013_remove_trial_plan.py  0014_fix_subscription_status_default.py  0015_fix_free_plan_trial_data.py  0016_increase_subscription_plan_length.py  0017_add_stripe_billing_integration.py  0018_add_person_model_and_hunter_integration.py  0018_add_telegram_notifications_integration_type.py  0018_add_zendesk_integration_type.py  0019_merge_20260128_1819.py
app/core/providers/: base.py  brandfetch.py  registry.py
app/core/services/: __init__.py  dashboard.py  email_enrichment.py  enrichment.py  logo_storage.py  shopify.py  stripe.py  webauthn.py
app/core/templates/: 404.html.j2  500.html.j2
app/core/templates/account/: login.html  login.html.j2  signup.html  signup.html.j2
app/core/templates/core/: accept_invitation.html.j2  base.html.j2  billing_dashboard.html.j2  billing_history.html.j2  checkout.html.j2  checkout_cancel.html.j2  checkout_success.html.j2  create_organization.html.j2  dashboard.html.j2  integrate_chargify.html.j2  integrate_hunter.html.j2  integrate_shopify.html.j2  integrate_stripe.html.j2  integrate_zendesk.html.j2  integrations.html.j2  landing.html.j2  members.html.j2  organization_settings.html.j2  payment_methods.html.j2  plan_selected.html.j2  select_plan.html.j2  telegram_connect.html.j2  (+2 more)
app/core/utils/: __init__.py  email_domain.py
app/core/views/: __init__.py  auth.py  billing.py  dashboard.py  errors.py  integrations.py  logos.py  members.py  settings.py  webauthn.py
app/django_notipus/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
app/models/: __init__.py
app/plugins/: __init__.py  base.py  registry.py
app/plugins/destinations/: __init__.py  base.py  slack.py  slack_utils.py  telegram.py
app/plugins/enrichment/: __init__.py  base.py  base_email.py  brandfetch.py  hunter.py  sentiment.py
app/plugins/sources/: __init__.py  base.py  chargify.py  shopify.py  stripe.py  zendesk.py
app/providers/: base.py  chargify.py  shopify.py
app/static/css/: fontawesome-fonts.css
app/static/js/: ui.js
app/tests/: conftest.py  test_event_processing.py  test_notification_enrichment.py  test_payment_providers.py
app/webhooks/: apps.py  domain_models.py  enrichment.py  event_processor.py  exceptions.py  insights.py  message_generator.py  messages.py  models.py  slack_client.py  tests.py  tests_stripe_provider.py  urls.py  views.py  webhook_router.py
app/webhooks/formatters/: __init__.py  base.py  slack.py
app/webhooks/migrations/: 0001_initial.py
app/webhooks/models/: __init__.py  database.py  notification.py  rich_notification.py
app/webhooks/providers/: __init__.py  base.py  chargify.py  shopify.py  stripe.py
app/webhooks/services/: __init__.py  billing.py  database_lookup.py  event_consolidation.py  event_processor.py  insight_detector.py  message_builder.py  notification_builder.py  pending_event_queue.py  rate_limiter.py  slack_client.py  thread_mapping.py  utils.py  webhook_storage.py
core/: views.py
django_notipus/: asgi.py  wsgi.py
docs/adr/: 001-unified-plugin-architecture.md
src/css/: main.css
tests/: conftest.py  test_billing_webhook.py  test_chargify_webhooks_comprehensive.py  test_email_enrichment.py  test_enriched_storage.py  test_enrichment_plugins.py  test_event_consolidation.py  test_event_processing.py  test_insight_detector.py  test_message_builder.py  test_message_formatting.py  test_message_style.py  test_notification_builder.py  test_notification_enrichment.py  test_payment_providers.py  test_pending_event_queue.py  test_sentiment_enrichment.py  test_shopify_complete.py  test_slack_formatter.py  test_slack_utils.py  test_stripe_billing.py  test_stripe_realistic_scenarios.py  test_sync_stripe_subscriptions.py  test_telegram_destination.py  test_thread_mapping.py  test_webhook_storage.py  test_webhooks.py  test_workspace_model.py  test_zendesk_webhooks.py
tests/core/: tests.py  tests_email_domain.py  tests_logos.py  tests_permissions.py  tests_services.py  tests_templates.py
tests/webhooks/: tests.py  tests_stripe_provider.py
webhooks/: event_processor.py  tests.py  urls.py  views.py
webhooks/models/: notification.py
webhooks/providers/: __init__.py  base.py  shopify.py
(+15 files in other folders)
