[project]
name = "notipus"
version = "0.1.0"
description = "A webhook service that sends enriched Shopify and Chargify notifications to Slack"
authors = [
    {name = "Viktopia Studio",email = "info@viktopia.io"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
]

[tool.poetry]
packages = [
    { include = "app" }
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.4,<9.0.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.4"
pre-commit = "^4.0.1"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
types-requests = "^2.31.0.20240218"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
