[project]
name = "notipus"
version = "0.1.0"
description = "A webhook service that sends enriched Shopify and Chargify notifications to Slack"
authors = [
    {name = "Viktopia Studio",email = "info@viktopia.io"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "stripe (>=12.3.0,<13.0.0)",
    "shopifyapi (>=12.7.0,<13.0.0)",
    "django-allauth (>=65.10.0,<66.0.0)",
    "webauthn (>=2.6.0,<3.0.0)",
    "django-extensions (>=4.1,<5.0)",
]

[tool.poetry]
packages = [
    { include = "app" }
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.4,<9.0.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.4"
pre-commit = "^4.0.1"
mypy = "^1.8.0"
types-requests = "^2.31.0.20240218"
pytest-django = "^4.11.1"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "DJ",  # flake8-django
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
known-third-party = ["django"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_notipus.test_settings"
pythonpath = ["app"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*", "*Test", "*TestCase"]
python_functions = ["test_*"]
addopts = "--strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
