[project]
name = "notipus"
version = "0.1.0"
description = "A webhook service that sends enriched Shopify, Stripe and Chargify notifications to Slack"
authors = [
    {name = "Viktopia Studio", email = "info@viktopia.io"}
]
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.5,<6.0.0",
    "requests>=2.32.3,<3.0.0",
    "uvicorn[standard]>=0.34.0",
    "psycopg2>=2.9.10,<3.0.0",
    "stripe>=12.3.0,<13.0.0",
    "shopifyapi>=12.7.0,<13.0.0",
    "django-allauth>=65.10.0,<66.0.0",
    "webauthn>=2.6.0,<3.0.0",
    "redis>=5.2.0,<6.0.0",
    "whitenoise>=6.11.0",
    "sentry-sdk[django]>=2.50.0",
    "disposable-email-domains>=0.0.156",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.8.4,<0.9.0",
    "pre-commit>=4.0.1,<5.0.0",
    "mypy>=1.8.0,<2.0.0",
    "types-requests>=2.31.0.20240218",
    "pytest-django>=4.11.1,<5.0.0",
    "djlint>=1.36.4,<2.0.0",
    "django-stubs>=5.0.0",
    "django-stubs-ext>=5.0.0",
    "django-extensions>=4.1,<5.0",
    "pytest-env>=1.2.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "DJ",  # flake8-django
]

[tool.ruff.lint.per-file-ignores]
# Django settings use star imports by convention
"**/settings.py" = ["F401"]  # Allow "imported but unused" for conditional imports
"**/test_settings.py" = ["F403", "F405"]  # Allow star imports in test settings

[tool.ruff.lint.isort]
known-first-party = ["app"]
known-third-party = ["django"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_notipus.test_settings"
pythonpath = ["app"]
# Set DEBUG=True for tests to pass the security check in settings.py
# (which defaults to DEBUG=False for production safety)
env = ["DEBUG=True"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*", "*Test", "*TestCase"]
python_functions = ["test_*"]
addopts = "--strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
# Django plugin is disabled because the project uses a nested module structure
# (app/ directory with pythonpath configuration) that causes mypy to see models
# under both "app.core.models" and "core.models", triggering duplicate model
# registration errors. To enable full Django type checking:
# 1. Restructure to have a single canonical import path, OR
# 2. Run mypy from within the app/ directory with PYTHONPATH set
# plugins = ["mypy_django_plugin.main"]

# [tool.django-stubs]
# django_settings_module = "django_notipus.test_settings"
# strict_settings = false

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "stripe.*",
    "shopify.*",
    "webauthn.*",
    "allauth.*",
]
ignore_missing_imports = true

[tool.djlint]
profile = "django"
extension = "html.j2"
indent = 4
max_line_length = 120
preserve_blank_lines = true
format_css = true
format_js = true
